fix: dropdown z-index

--- a/front/assets/styles/constants.sass
+++ b/front/assets/styles/constants.sass
@@ -20,6 +20,7 @@ $z-tags-menu-bg: 15
 $z-player-box: 10
 $z-page-item-buttons: 1
 $z-page-item-dots: 2
+$z-page-item-dropdown: 3
 
 // Animations
 
