--- a/front/components/DotsMenu/DotsMenu.sass
+++ b/front/components/DotsMenu/DotsMenu.sass
@@ -17,3 +17,7 @@ $root: '.Box'
   position: absolute
   right: $space-xxxxxs
   top: $space-xxxs
+
+.DropDownOverlay
+  z-index: $z-page-item-dropdown
+
